# cross-view-fusion

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset-creation/: README.md  pyproject.toml
dataset-creation/src/dataset_creation/: __init__.py  __main__.py  build_dataset.py  download_mapillary.py
dataset-creation/src/dataset_creation/satelite_view/: utils.py
dataset-creation/src/dataset_creation/street_view/: data_models.py  mapillary_api.py
src/cross_view_fusion/: __init__.py
