[project]
name = "cross-view-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Holmberg", email = "anton.holmberg@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.1",
]

[project.scripts]
cross-view-fusion = "cross_view_fusion:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "dataset-creation",
]
