[project]
name = "dataset-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Holmberg", email = "anton.holmberg@live.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dataset-creation = "dataset_creation:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
