[project]
name = "dataset-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Holmberg", email = "anton.holmberg@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mapillary>=1.0.15",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typer[all]>=0.15.0",
    "tqdm>=4.0.0",
    "httpx>=0.28.0",
    "vt2geojson>=0.2.1",
    "mercantile>=1.2.1",
    "pydantic>=2.12.5",
    "rasterio>=1.5.0",
    "pyproj>=3.7.2",
]

#[project.scripts]
#dataset-creation = "dataset_creation:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flameprof>=0.4",
]
